[gd_scene load_steps=4 format=3 uid="uid://bdkicdc8evj73"]

[ext_resource type="Texture2D" uid="uid://ciusmo7pywms8" path="res://assets/black_king.png" id="1_wbjp2"]
[ext_resource type="Script" path="res://scripts/dragAndDrop.gd" id="1_wwn35"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_adh7w"]
size = Vector2(38, 40)

[node name="bk" type="Node2D"]
script = ExtResource("1_wwn35")

[node name="BlackKing" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_wbjp2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_adh7w")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
